<resources>
    <string name="app_name">RentaCar</string>
    <string name="action_settings">Settings</string>
    <string name="nav_header_subtitle">Su servicio de renta de autos</string>
    <string name="nav_header_desc">Barra de navegación</string>
    <string name="fragment_login_label">Inicio de sesión</string>
    <string name="fragment_register_label">Registro</string>
    <string name="fragment_l_home_title">Buscar auto</string>
    <string name="fragment_l_requested_cars_title">Autos en renta</string>
    <string name="fragment_g_home_title">Bienvenido a Rentacar</string>
    <string name="fragment_l_cars_title">Autos</string>
    <string name="fragment_l_details_title">Detalles</string>
    <string name="fragment_getlocation_title">Seleccióna la ubicación</string>
    <string name="fragment_d_rent_report_title">Reporte de renta</string>
    <string name="what_user_are_you">¿Que necesitas?</string>
    <string name="iam_lessee">Rentar un auto</string>
    <string name="iam_driver">Llevar autos a su destino</string>
    <string name="fragment_g_home_header_desc">Primero cuentanos como podemos ayudarte para poder continuar</string>
    <string name="fragment_g_home_body_label">Yo quiero...</string>
    <string name="fragment_l_driver_delivery_title">Pedidos</string>
    <string name="fragment_d_driver_delivery_title">Fáses de entrega</string>
    <string name="menu_action_exit">Salir</string>
    <string name="menu_action_logout">Cerrar sesión</string>
    <string name="menu_action_change_user">Cambiar usuario</string>
    <string name="signUp">Registrar</string>
    <string name="signIn">Entrar</string>
    <string name="back">Back</string>
    <string name="invite_to_signUp"><b><u>¿Aun no tienes cuenta?, Registrate</u></b></string>
    <string name="next">Siguiente</string>
    <string name="save_location">Guardar</string>
    <string name="rent_car">Rentar</string>
    <string name="get_car">¡Genial! Ahora puedes disfrutar del auto</string>
    <string name="save_report">Guardar</string>
    <string name="map_marker_label">Justo aquí</string>
    <string name="label_et_inviRegis">Te invitamos a registrarte para que el proceso de renta sea más rápido.</string>
    <string name="just_login"><u>Ya tengo una cuenta</u></string>
    <string name="report_upload_success">Reporte subido correctamente</string>
    <string name="error_generic_request">Ha ocurrido un error, por favor intentalo de nuevo</string>
    <string name="error_et_empty">Completa este campo</string>
    <string name="error_et_invalid">El formato es invalido</string>
    <string name="error_et_minlength">Demasiado corto</string>
    <string name="error_et_maxlength">Demasiado largo</string>
    <string name="error_et_age_restriction">Debes ser mayor de edad para continuar</string>
    <string name="error_et_duplicate_email">Este correo ya esta registrado</string>
    <string name="error_et_duplicate_phone">Este telefono ya esta registrado</string>
    <string name="error_file_empty">Vacío</string>
    <string name="error_file_fetch">Error al intentar obtener la imagen</string>
    <string name="error_login_fail">Correo y/o contraseña incorrecto</string>
    <string name="error_sdcard_without_images">No se encontraron imagenes en la tarjeta sd</string>
    <string name="error_no_cars_founded">No se encontraron autos con esos críterios</string>
    <string name="error_no_cars_to_delivery">No se encontraron autos.</string>
    <string name="error_no_cars_rented">No se encontraron autos</string>
    <string name="error_dates_offset">Las fechas deben tener al menos un dia de direfencia</string>
    <string name="error_dates_start">La fecha de entrega ya ha pasado</string>
    <string name="error_dates_min">Debes darle al conductor al menos 30 minutos</string>
    <string name="error_already_rented">Alguien mas acaba de rentar este auto durante la fecha y hora que escogiste</string>
    <string name="error_not_drivers_available">No hay conductores disponibles para esa fecha y horario</string>
    <string name="error_driver_first">El conductor tiene que intervenir primero</string>
    <string name="error_empty_report_items">No hay incidencias</string>
    <string name="dialog_title_get_image">¿De donde quieres tomar la imagen?</string>
    <string name="dialog_btn_get_image_1">Tomar captura</string>
    <string name="dialog_btn_get_image_2">Seleccionar una imagen existente</string>
    <string name="dialog_report_items">¿Que problema encontraste?</string>
    <string name="label_et_firstname">Nombre</string>
    <string name="label_et_lastname">Apellido</string>
    <string name="label_et_password">Contraseña</string>
    <string name="label_et_flastname">Apellido paterno</string>
    <string name="label_et_mlastname">Apellido materno</string>
    <string name="label_et_bank">Banco</string>
    <string name="label_et_card">Número de tarjeta</string>
    <string name="label_et_durability">Vigencia</string>
    <string name="label_et_birthdate">Fecha de nacimiento</string>
    <string name="label_et_email">Correo</string>
    <string name="label_et_pass2">Confirmar contraseña</string>
    <string name="label_et_phone">Teléfono</string>
    <string name="label_et_zip">C.P.</string>
    <string name="label_et_zip_extended">Código postal</string>
    <string name="label_et_state">Estado</string>
    <string name="label_et_city">Municipio</string>
    <string name="label_et_address">Dirección</string>
    <string name="label_et_front">Parte delantera</string>
    <string name="label_et_back">Parte trasera</string>
    <string name="label_et_minprice">Precio mínimo</string>
    <string name="label_et_maxprice">Precio máximo</string>
    <string name="label_et_car">Auto</string>
    <string name="label_dp_startdate">Fecha</string>
    <string name="label_dp_enddate">Fecha</string>
    <string name="label_lp_startlocation">Ubicación de entrega</string>
    <string name="label_lp_endlocation">Ubicación de devolución</string>
    <string name="label_tp_starttime">Hora</string>
    <string name="label_tp_endtime">Hora</string>
    <string name="label_et_type">Tipo de auto</string>
    <string name="label_et_search">Buscar</string>
    <string name="label_et_phase">Fase de renta</string>
    <string name="label_et_phase_delivery">Fase de entrega</string>
    <string name="label_et_report_items">Incidencias</string>
    <string name="label_et_report_description">Resumen</string>
    <string name="label_et_item_image">Evidencia</string>
    <string name="label_et_carName">Nissan Tsuru 2006</string>
    <string name="label_et_price">$500 MXN/Día</string>
    <string name="label_et_standar">Estandar</string>
    <string name="label_et_automatic">Automático</string>
    <string name="label_et_gps">GPS</string>
    <string name="label_et_ac">AC</string>
    <string name="label_tv_transmission_auto">Automático</string>
    <string name="label_tv_transmission_manual">Manual</string>
    <string name="label_tv_price_simbol">$</string>
    <string name="label_tv_price_extra"> MXN/Día</string>
    <string name="label_tv_price_extra_simple"> MXN</string>
    <string name="label_tv_doors">puertas</string>
    <string name="label_tv_chairs">asientos</string>
    <string name="label_tv_loading">Cargando…</string>
    <string name="label_tv_storage_size_none">No tiene cajuela</string>
    <string name="label_tv_storage_size">Cajuela</string>
    <string name="label_tv_storage_size_1">pequeña</string>
    <string name="label_tv_storage_size_2">mediana</string>
    <string name="label_tv_storage_size_3">grande</string>
    <string name="label_tv_engine_type_0">Gasolina</string>
    <string name="label_tv_engine_type_1">Diesel</string>
    <string name="label_tv_engine_type_2">Electrico</string>
    <string name="label_tv_engine_type_3">Gas</string>
    <string name="label_tv_engine_type_4">Hibrido gasolina-electrico</string>
    <string name="label_tv_engine_type_5">Hibrido gasolina-gas</string>
    <string name="label_tv_fuel_unit">Km/L</string>
    <string name="label_tv_horse_power">HP</string>
    <string name="label_tv_tank_capacity_extra">L</string>
    <string name="label_tv_tank_capacity_start">Tanque de</string>
    <string name="label_tv_air">Aire acondicionado</string>
    <string name="label_tv_gps">GPS</string>
    <string name="label_tv_polarized_glasses">Vidrios polarizados</string>
    <string name="label_tv_insurance">Seguro de </string>
    <string name="label_tv_replacement_wheel">Llanta de repuesto</string>
    <string name="label_tv_toolbox">Caja de herramientas</string>
    <string name="label_tv_color">Color</string>
    <string name="label_tv_rented_car_startdate">Desde</string>
    <string name="label_tv_rented_car_enddate">Hasta</string>
    <string name="label_tv_rented_car_finalprice">Precio total de </string>
    <string name="label_tv_driver_start">En espera de que confirmes que recibiste las llaves</string>
    <string name="label_tv_driver_end">En espera de que confirmes que entregaste las llaves</string>
    <string name="label_tv_driver_delivery">En espera de que el usuario confirme que recibio las llaves</string>
    <string name="label_tv_delivery_end">En espera de que el usuario confirme que te entrego las llaves</string>
    <string name="label_tv_no_report">Aun no se entrega el reporte</string>
    <string name="help_et_firstname">Solo tu primer nombre</string>
    <string name="help_et_lastname">Solo tu primer apellido</string>
    <string name="help_et_birthdate">Necesitamos saber que eres mayor de edad</string>
    <string name="help_et_password">Combina mayusculas y minusculas con números para mayor seguridad</string>
    <string name="help_et_password_login"></string>
    <string name="help_et_email">Te mandaremos las notificaciones a este correo</string>
    <string name="help_et_email_login"></string>
    <string name="help_et_phone">Tu número sin lada</string>
    <string name="help_et_zip"></string>
    <string name="help_et_state">Estado donde estas viviendo</string>
    <string name="help_et_city">Municipio donde estas viviendo</string>
    <string name="help_et_address">Cuentanos por donde hay que girar para llevarte el auto</string>
    <string name="help_et_front">Asegurate de que se vean bien tus datos</string>
    <string name="help_et_back">Asegurate de que se vean bien tus datos</string>
    <string name="help_et_minprice">Este pago es por día</string>
    <string name="help_et_maxprice">Este pago es por día</string>
    <string name="help_dp_startdate">Elige una fecha para recibirlo</string>
    <string name="help_tp_starttime"></string>
    <string name="help_dp_enddate">Elige una fecha para desocuparlo</string>
    <string name="help_tp_endtime"></string>
    <string name="help_lp_startlocation">Elige donde quieres recibir el auto</string>
    <string name="help_lp_endlocation">Elige donde quieres entregar el auto</string>
    <string name="help_et_phase"></string>
    <string name="help_et_report_items">Las incidencias que detedtaron en el auto</string>
    <string name="help_et_report_description">Resumen del reporte</string>
    <string name="help_et_item_image">Una imagen vale mas que mil palabras</string>
    <string name="fragment_l_register_step1_label">Datos personales</string>
    <string name="fragment_l_register_step2_label">Datos de contacto</string>
    <string name="fragment_l_register_step3_label">Datos de lincencia</string>
    <string name="fragment_get_location_label">Seleccionar ubicación</string>
    <string name="collapse_spaces">Espacios</string>
    <string name="collapse_specs">Especificaciones</string>
    <string name="rating_title">Porfavor danos tu opinión sobre tu experiencia con nosotros.</string>
    <string name="rating">¿Cuántas estrellas le das al auto que rentaste?</string>
    <string name="user_description">Danos una conclusión de tu experiencia rentando nuestros autos!</string>
</resources>