<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/car_image"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:src="@drawable/carrorojo"
        android:background="@color/black"/>

    <RatingBar
        android:id="@+id/car_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progressTint="@color/gold"
        android:numStars="5"
        android:rating="4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="180dp"
        android:background="@color/white"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/carName"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/label_et_carName"
                android:textAlignment="center"
                android:textSize="25dp"
                android:textColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="220dp"
        android:layout_marginLeft="20dp">
        <TextView
            android:id="@+id/car_price"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/label_et_price"
            android:textColor="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="220dp"
        android:layout_marginLeft="125dp">
        <TextView
            android:id="@+id/car_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/label_et_standar"
            android:textColor="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="220dp"
        android:layout_marginLeft="200dp">
        <TextView
            android:id="@+id/car_gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_et_gps"
            android:textColor="@color/black"
            android:drawableEnd="@drawable/ic_gps"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="220dp"
        android:layout_marginStart="280dp">
        <TextView
            android:id="@+id/car_air"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_et_ac"
            android:textColor="@color/black"
            android:drawableEnd="@drawable/ic_ac"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>