<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/layout_ph_small"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/layout_et_report_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/layout_et_mb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/label_et_report_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_et_report_items"
            android:labelFor="@id/et_report_items"
            style="@style/text_medium_gray"
            android:visibility="invisible"/>
        <Spinner
            android:id="@+id/et_report_items"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/label_et_report_items"
            style="@style/spn_medium_light"/>
        <TextView
            android:id="@+id/help_et_report_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_et_report_items"
            android:labelFor="@id/et_report_items"
            style="@style/text_big_lightGray"/>
        <TextView
            android:id="@+id/log_et_report_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/et_report_items"
            style="@style/text_big_bold_danger"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_et_item_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/layout_et_mb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_et_report_items">
        <TextView
            android:id="@+id/label_et_item_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_et_item_image"
            android:labelFor="@id/status_et_item_image"
            style="@style/text_medium_gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/status_et_item_image"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                style="@style/upload_textview_simple" />
            <Button
                android:id="@+id/btn_item_image"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                style="@style/upload_button_simple" />
        </LinearLayout>
        <TextView
            android:id="@+id/help_et_item_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_et_item_image"
            android:labelFor="@id/status_et_item_image"
            style="@style/text_big_lightGray"/>
        <TextView
            android:id="@+id/log_et_item_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/status_et_item_image"
            style="@style/text_big_bold_danger"
            android:visibility="gone"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>